Blender crashing with "Open Cached Render" function #91629

Closed
opened 2021-09-23 10:54:36 +02:00 by Alaska · 10 comments
Member

System Information:
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version:
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 05:54, hash: a351023bd5
Worked: 2.93.4
Caused by 038f9b7f4a

Short description of error:
Blender will crash when using the Open Cached Render function in the image editor when Cache Results is enabled.

Exact steps for others to reproduce the error:

  1. Open Blender.
  2. In the Output tab of the Properties Editor enable the Cache Result option in the Output section .
  3. Render a scene in EEVEE.
  4. Open an image editor and select from the top Image -> Open Cached Render. Blender should crash.

Note: While triaging this bug make sure you clear the cached result from your temporary folder between each crash just to avoid issues.

Here's an example video:
Cached result crash.mp4

**System Information:** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version:** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 05:54, hash: `a351023bd5` Worked: 2.93.4 Caused by 038f9b7f4a **Short description of error:** Blender will crash when using the `Open Cached Render` function in the image editor when `Cache Results` is enabled. **Exact steps for others to reproduce the error:** 1. Open Blender. 2. In the `Output` tab of the `Properties Editor` enable the `Cache Result` option in the `Output` section . 3. Render a scene in EEVEE. 4. Open an image editor and select from the top `Image -> Open Cached Render`. Blender should crash. Note: While triaging this bug make sure you clear the cached result from your temporary folder between each crash just to avoid issues. Here's an example video: [Cached result crash.mp4](https://archive.blender.org/developer/F10557326/Cached_result_crash.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Hi, can reproduce the crash on master: a78d3c5261

Commit which causes this problem lies between eec1ea0ccf - 5ef3afd87c (Finding the exact commit...)

Hi, can reproduce the crash on master: `a78d3c5261` Commit which causes this problem lies between `eec1ea0ccf` - `5ef3afd87c` (Finding the exact commit...)
Author
Member

In #91629#1224406, @PratikPB2123 wrote:
Commit which causes this problem lies between eec1ea0ccf - 5ef3afd87c (Finding the exact commit...)

I'm also bisecting, just so we can get confirmed results from two people.

> In #91629#1224406, @PratikPB2123 wrote: > Commit which causes this problem lies between `eec1ea0ccf` - `5ef3afd87c` (Finding the exact commit...) I'm also bisecting, just so we can get confirmed results from two people.
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

My bisect points to 038f9b7f4a being the first bad commit.

CC @Sergey

My bisect points to 038f9b7f4a being the first bad commit. CC @Sergey
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sergey Sharybin self-assigned this 2021-09-23 12:06:23 +02:00
Sergey Sharybin was unassigned by Pratik Borhade 2021-09-23 12:07:14 +02:00
Sergey Sharybin was assigned by Pratik Borhade 2021-09-23 12:08:03 +02:00
Member

Sergey removed by mistake as a assignee

Sergey removed by mistake as a assignee

This issue was referenced by e86cf55667

This issue was referenced by e86cf55667a74c469c325f1bae1868ac963fb87d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91629
No description provided.