Fix T91629: Crash in "Open Cached Render" function